docs/case-studies/ringlet/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ringlet
  labels:
    name: ringlet
    environment: production
